# Game_Dog_Story

./: CMakeLists.txt  Dockerfile  README.md  build_script.sh  conanfile.txt  run_server  tests_move.sh
src/: main.cpp  utils.h
src/application/: application.cpp  application.h  collision_manager.cpp  collision_manager.h  game_manager.cpp  game_manager.h  utils.h
src/database/: connection_pool.h  database_connection_settings.h  database_exceptions.h  database_invariants.h  player_record.h  postgres.cpp  postgres.h  use_cases.h  use_cases_impl.cpp  use_cases_impl.h
src/game_data_persistence/: backup_restore_manager.cpp  backup_restore_manager.h
src/models/: loot_generator.h  map.cpp  map.h
src/physics/: collision_detector.cpp  collision_detector.h  geom.h
src/response/: response.cpp  response.h  utils.h
src/serialization_game/: bag_serialization.cpp  bag_serialization.h  dog_serialization.cpp  dog_serialization.h  game_manager_serialization.cpp  game_manager_serialization.h  game_session_serialization.cpp  game_session_serialization.h  geometry_primitives_serialization.h  lost_object_serialization.cpp  lost_object_serialization.h  player_serialization.cpp  player_serialization.h
src/server/: http_server.cpp  http_server.h
src/software_options/: parser.cpp  parser.h
src/time_management/: ticker.cpp  ticker.h
src/work_with_json/: json_convert.cpp  json_convert.h  json_loader.cpp  json_loader.h
tests/: collision-detector-tests.cpp  loot_generator_tests.cpp  state-serialization-tests.cpp
